V 0.770 Invisible Service + New Booking

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -789,7 +789,9 @@
     "cannotDeleteHint": "Please cancel or expire all contracts before deleting this service.",
     "halfDay": "Half Day",
     "oneDay": "1 Day",
-    "daysCount": "{{count}} Days"
+    "daysCount": "{{count}} Days",
+    "privateService": "Private Service",
+    "privateServiceHelp": "Private services are only visible to administrators and cannot be selected by customers when creating contracts"
   },
   "reservations": {
     "title": "Package Reservations",
@@ -1067,46 +1069,53 @@
     "structureNamePlaceholder": "Enter structure name"
   },
   "bookings": {
-    "title": "Bookings Calendar",
-    "viewYourBookings": "View your active bookings",
-    "manageAllBookings": "Manage all your customers' bookings",
+    "title": "Bookings",
+    "viewYourBookings": "View and manage your bookings",
+    "manageAllBookings": "Manage all customer bookings",
+    "newReservation": "New Reservation",
+    "bookForCustomer": "Book for Customer",
+    "bookPackage": "Book Package",
     "month": "Month",
-    "week": "Week", 
+    "week": "Week",
     "day": "Day",
     "today": "Today",
     "filters": "Filters",
     "customer": "Customer",
-    "allCustomers": "All customers",
+    "allCustomers": "All Customers",
     "resourceType": "Resource Type",
-    "allResources": "All resources",
+    "allResources": "All Resources",
     "location": "Location",
-    "allLocations": "All locations",
+    "allLocations": "All Locations",
     "clearFilters": "Clear Filters",
-    "legend": "Legend",
+    "noBookingsFound": "No bookings found",
+    "noBookingsForDay": "No bookings scheduled for this day",
     "booking": "booking",
     "bookings": "bookings",
-    "noBookingsForDay": "No bookings for this day",
-    "noBookingsFound": "No bookings found for the selected period",
     "more": "more",
-    "activeBookings": "Active Bookings",
-    "upcomingBookings": "Upcoming Bookings", 
-    "viewBookings": "View Bookings",
-    "totalBookings": "Total Bookings",
-    "bookForCustomer": "Book for Customer",
-    "selectCustomer": "Select Customer",
-    "selectPackage": "Select Package",
-    "bookingFor": "Booking for:",
-    "changeCustomer": "Change Customer",
-    "noCustomersWithPackages": "No customers with available package entries found",
-    "noAvailablePackages": "No available packages found for this customer",
-    "selectACustomer": "Select a customer...",
-    "selectAPackage": "Select a package...",
-    "packageContract": "Package Contract",
-    "packageDetails": "Package Details",
+    "legend": "Legend",
+    "left": "left",
+    "entriesLeft": "entries left",
+    "activeSubscriptions": "Active Subscriptions",
+    "packageBookings": "Package Bookings",
+    "whatYouCanAccess": "What You Can Access Today",
+    "resource": "Resource",
+    "address": "Address",
+    "contractStatus": "Contract Status",
+    "validUntil": "Valid Until",
+    "contractValue": "Contract Value",
+    "packageOverview": "Package Overview",
+    "of": "of",
     "entriesRemaining": "entries remaining",
-    "loadingCustomers": "Loading customers...",
-    "loadingPackages": "Loading packages...",
-    "newReservation": "New Booking"
+    "used": "used",
+    "packageExpiringSoon": "Package expires in {days} days",
+    "lowEntriesRemaining": "Only {entries} entries remaining",
+    "costPerEntry": "Cost per Entry",
+    "remainingValue": "Remaining Value",
+    "todayBooking": "Today's Booking",
+    "timeSlot": "Time Slot",
+    "bookAnother": "Book Another Entry",
+    "packageContract": "Contract",
+    "selectAPackage": "Select a package"
   },
   "calendar": {
     "sunday": "Sun",
