--- a/src/locales/it.json
+++ b/src/locales/it.json
@@ -790,7 +790,9 @@
     "cannotDeleteHint": "Si prega di cancellare o far scadere tutti i contratti prima di eliminare questo servizio.",
     "halfDay": "Mezza Giornata",
     "oneDay": "1 Giorno",
-    "daysCount": "{{count}} Giorni"
+    "daysCount": "{{count}} Giorni",
+    "privateService": "Servizio Privato",
+    "privateServiceHelp": "I Servizi Privati sono visibili solo ai partner e non possono essere selezionati dai clienti "
   },
   "reservations": {
     "title": "Prenotazioni Pacchetto",
@@ -1070,46 +1072,52 @@
     "structureNamePlaceholder": "Inserisci il nome della struttura"
   },
   "bookings": {
-    "title": "Calendario Prenotazioni",
-    "viewYourBookings": "Visualizza le tue prenotazioni attive",
-    "manageAllBookings": "Gestisci tutte le prenotazioni dei tuoi clienti",
+    "title": "Prenotazioni",
+    "viewYourBookings": "Visualizza e gestisci le tue prenotazioni",
+    "manageAllBookings": "Gestisci tutte le prenotazioni dei clienti",
+    "newReservation": "Nuova Prenotazione",
+    "bookForCustomer": "Prenota per Cliente",
+    "bookPackage": "Prenota Pacchetto",
     "month": "Mese",
     "week": "Settimana",
-    "day": "Giorno", 
+    "day": "Giorno",
     "today": "Oggi",
     "filters": "Filtri",
     "customer": "Cliente",
-    "allCustomers": "Tutti i clienti",
+    "allCustomers": "Tutti i Clienti",
     "resourceType": "Tipo Risorsa",
-    "allResources": "Tutte le risorse",
+    "allResources": "Tutte le Risorse",
     "location": "Sede",
-    "allLocations": "Tutte le sedi",
-    "clearFilters": "Pulisci Filtri",
-    "legend": "Legenda",
+    "allLocations": "Tutte le Sedi",
+    "clearFilters": "Cancella Filtri",
+    "noBookingsFound": "Nessuna prenotazione trovata",
+    "noBookingsForDay": "Nessuna prenotazione per questo giorno",
     "booking": "prenotazione",
     "bookings": "prenotazioni",
-    "noBookingsForDay": "Nessuna prenotazione per questo giorno",
-    "noBookingsFound": "Nessuna prenotazione trovata per il periodo selezionato",
-    "more": "altro",
-    "activeBookings": "Prenotazioni Attive",
-    "upcomingBookings": "Prenotazioni Future",
-    "viewBookings": "Visualizza Prenotazioni", 
-    "totalBookings": "Prenotazioni Totali",
-    "bookForCustomer": "Prenota per Cliente",
-    "selectCustomer": "Seleziona Cliente",
-    "selectPackage": "Seleziona Pacchetto",
-    "bookingFor": "Prenotazione per:",
-    "changeCustomer": "Cambia Cliente",
-    "noCustomersWithPackages": "Nessun cliente con ingressi disponibili trovato",
-    "noAvailablePackages": "Nessun pacchetto disponibile trovato per questo cliente",
-    "selectACustomer": "Seleziona un cliente...",
-    "selectAPackage": "Seleziona un pacchetto...",
-    "packageContract": "Contratto Pacchetto",
-    "packageDetails": "Dettagli Pacchetto",
+    "more": "altre",
+    "legend": "Legenda",
+    "left": "rimasti",
+    "entriesLeft": "ingressi rimasti",
+    "activeSubscriptions": "Abbonamenti Attivi",
+    "packageBookings": "Prenotazioni Pacchetto",
+    "whatYouCanAccess": "A Cosa Puoi Accedere Oggi",
+    "resource": "Risorsa",
+    "address": "Indirizzo",
+    "contractStatus": "Stato Contratto",
+    "validUntil": "Valido Fino a",
+    "contractValue": "Valore Contratto",
+    "packageOverview": "Panoramica Pacchetto",
+    "of": "di",
     "entriesRemaining": "ingressi rimanenti",
-    "loadingCustomers": "Caricamento clienti...",
-    "loadingPackages": "Caricamento pacchetti...",
-    "newReservation": "Nuova Prenotazione"
+    "used": "utilizzato",
+    "packageExpiringSoon": "Il pacchetto scade tra {days} giorni",
+    "lowEntriesRemaining": "Solo {entries} ingressi rimanenti",
+    "costPerEntry": "Costo per Ingresso",
+    "remainingValue": "Valore Residuo",
+    "todayBooking": "Prenotazione di Oggi",
+    "timeSlot": "Fascia Oraria",
+    "packageContract": "Contratto",
+    "selectAPackage": "Seleziona un pacchetto"
   },
   "calendar": {
     "sunday": "Dom",
