V 0.780 Logs for admin e superadmin + fix

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -22,7 +22,8 @@
     "partnerContracts": "Partner Contracts",
     "discountCodes": "Discount Codes",
     "support": "Support",
-    "customersDiscountCodes": "Discount Codes"
+    "customersDiscountCodes": "Discount Codes",
+    "logview": "Logs"
   },
   "customers": {
     "title": "Customers",
@@ -1820,6 +1821,81 @@
     "title": "Customer Discount Codes",
     "subtitle": "Create and manage discount codes for your customers",
     "accessDeniedMessage": "Only partners can manage customer discount codes."
+  },
+  "logs": {
+    "title": "Activity Logs",
+    "description": "Description",
+    "accessDenied": "Access Denied",
+    "accessDeniedMessage": "You don't have permission to view activity logs",
+    "selectPartner": "Select Partner",
+    "selectPartnerPlaceholder": "Choose a partner to view logs",
+    "errorLoadingPartners": "Error loading partners",
+    "errorLoadingLogs": "Error loading activity logs",
+    "filters": "Filters",
+    "clearFilters": "Clear Filters",
+    "dateFrom": "From Date",
+    "dateTo": "To Date",
+    "category": "Category",
+    "actionType": "Action Type",
+    "allCategories": "All Categories",
+    "allActions": "All Actions",
+    "totalLogs": "Total Logs",
+    "currentPage": "Current Page",
+    "dateTime": "Date & Time",
+    "user": "User",
+    "email": "Email",
+    "entityType": "Entity Type",
+    "actionsColumn": "Actions",
+    "viewDetails": "View Details",
+    "noLogsFound": "No activity logs found",
+    "previous": "Previous",
+    "next": "Next",
+    "page": "Page",
+    "of": "of",
+    "logDetails": "Log Details",
+    "generalInfo": "General Information",
+    "actionInfo": "Action Information",
+    "metadata": "Metadata",
+    "ipAddress": "IP Address",
+    "entityId": "Entity ID",
+    "unknownUser": "Unknown User",
+    "categories": {
+      "authentication": "Authentication",
+      "contract": "Contract",
+      "customer": "Customer",
+      "booking": "Booking",
+      "service": "Service",
+      "location": "Location",
+      "resource": "Resource",
+      "payment": "Payment",
+      "system": "System"
+    },
+    "actions": {
+      "create": "Create",
+      "created": "Created",
+      "update": "Update",
+      "updated": "Updated",
+      "delete": "Delete",
+      "deleted": "Deleted",
+      "login": "Login",
+      "logout": "Logout",
+      "view": "View",
+      "viewed": "Viewed",
+      "export": "Export",
+      "exported": "Exported",
+      "import": "Import",
+      "imported": "Imported",
+      "approve": "Approve",
+      "approved": "Approved",
+      "reject": "Reject",
+      "rejected": "Rejected",
+      "cancel": "Cancel",
+      "cancelled": "Cancelled",
+      "activate": "Activate",
+      "activated": "Activated",
+      "deactivate": "Deactivate",
+      "deactivated": "Deactivated"
+    }
   },
   "app": {
     "appName": " ",
