--- a/src/locales/it.json
+++ b/src/locales/it.json
@@ -22,7 +22,8 @@
     "partnerContracts": "Contratti Partner",
     "discountCodes": "Codici Sconto",
     "support": "Supporto",
-    "customersDiscountCodes": "Codici Sconto"
+    "customersDiscountCodes": "Codici Sconto",
+    "logview": "Logs"
   },
   "customers": {
     "title": "Clienti",
@@ -1822,6 +1823,82 @@
     "title": "Codici Sconto Clienti",
     "subtitle": "Crea e gestisci i codici sconto per i tuoi clienti",
     "accessDeniedMessage": "Solo i partner possono gestire i codici sconto per i clienti."
+  },
+  "logs": {
+    "title": "Registro Attività",
+    "description": "Visualizza e monitora tutte le attività del sistema e le azioni degli utenti",
+    "accessDenied": "Accesso Negato",
+    "accessDeniedMessage": "Non hai i permessi per visualizzare il registro attività",
+    "selectPartner": "Seleziona Partner",
+    "selectPartnerPlaceholder": "Scegli un partner per visualizzare i log",
+    "errorLoadingPartners": "Errore nel caricamento dei partner",
+    "errorLoadingLogs": "Errore nel caricamento del registro attività",
+    "filters": "Filtri",
+    "clearFilters": "Cancella Filtri",
+    "dateFrom": "Data Da",
+    "dateTo": "Data A",
+    "category": "Categoria",
+    "actionType": "Tipo di Azione",
+    "allCategories": "Tutte le Categorie",
+    "allActions": "Tutte le Azioni",
+    "totalLogs": "Totale Log",
+    "currentPage": "Pagina Corrente",
+    "dateTime": "Data e Ora",
+    "user": "Utente",
+    "email": "Email",
+    "entityType": "Tipo di Entità",
+    "description": "Descrizione",
+    "actionsColumn": "Azioni",
+    "viewDetails": "Visualizza Dettagli",
+    "noLogsFound": "Nessun registro attività trovato",
+    "previous": "Precedente",
+    "next": "Successivo",
+    "page": "Pagina",
+    "of": "di",
+    "logDetails": "Dettagli Log",
+    "generalInfo": "Informazioni Generali",
+    "actionInfo": "Informazioni Azione",
+    "metadata": "Metadati",
+    "ipAddress": "Indirizzo IP",
+    "entityId": "ID Entità",
+    "unknownUser": "Utente Sconosciuto",
+    "categories": {
+      "authentication": "Autenticazione",
+      "contract": "Contratto",
+      "customer": "Cliente",
+      "booking": "Prenotazione",
+      "service": "Servizio",
+      "location": "Sede",
+      "resource": "Risorsa",
+      "payment": "Pagamento",
+      "system": "Sistema"
+    },
+    "actions": {
+      "create": "Crea",
+      "created": "Creato",
+      "update": "Modifica",
+      "updated": "Modificato",
+      "delete": "Elimina",
+      "deleted": "Eliminato",
+      "login": "Login",
+      "logout": "Logout",
+      "view": "Visualizza",
+      "viewed": "Visualizzato",
+      "export": "Esporta",
+      "exported": "Esportato",
+      "import": "Importa",
+      "imported": "Importato",
+      "approve": "Approva",
+      "approved": "Approvato",
+      "reject": "Rifiuta",
+      "rejected": "Rifiutato",
+      "cancel": "Annulla",
+      "cancelled": "Annullato",
+      "activate": "Attiva",
+      "activated": "Attivato",
+      "deactivate": "Disattiva",
+      "deactivated": "Disattivato"
+    }
   },
   "app": {
     "appName": " ",
