--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -128,6 +128,7 @@
     "profileNotFound": "Customer profile not found",
     "errorLoadingProfile": "Error loading your customer profile",
     "errorLoadingCustomers": "Error loading customers",
+    "email": "Email",
     "constraints": {
       "activeBookings": "{{count}} active booking(s)",
       "activeContracts": "{{count}} active contract(s)",
@@ -165,7 +166,10 @@
     "uploadBanner": "Upload Banner",
     "systemEmailBanner": "System Email Banner",
     "systemEmailBannerDescription": "Upload a banner image that will appear at the top of system email templates (partner invitations). Recommended size: 800x200px. Supported formats: JPG, PNG, GIF.",
-    "uploadSystemEmailBanner": "Upload System Email Banner"
+    "uploadSystemEmailBanner": "Upload System Email Banner",
+    "operatingCalendar": "Operating Calendar",
+    "manageOperatingCalendar": "Manage Operating Calendar",
+    "operatingCalendarDescription": "Configure when your locations and resources are available for booking"
   },
   "locations": {
     "addLocation": "Add Location",
@@ -315,7 +319,9 @@
     "deleteWarningResources": "{{count}} resource(s) will be permanently deleted",
     "deleteWarningImages": "{{count}} image(s) will be permanently deleted from storage",
     "deleteWarningHistoricalData": "{{count}} historical booking record(s) will lose location reference",
-    "deleteValidationError": "Unable to validate deletion safety. Please try again."
+    "deleteValidationError": "Unable to validate deletion safety. Please try again.",
+    "allDesks": "All Desks",
+    "allMeetingRooms": "All Meeting Rooms"
   },
   "auth": {
     "signIn": "Sign In",
@@ -572,7 +578,8 @@
     "to": "to",
     "of": "of",
     "confirm": "Confirm",
-    "accessDenied": "Access denied"
+    "accessDenied": "Access denied",
+    "select": "Select"
   },
   "messages": {
     "signedInSuccessfully": "Signed in successfully",
@@ -854,7 +861,19 @@
     "selectDuration": "Select duration",
     "available": "Available",
     "resourceAvailableFor": "{{resource}} is available for your selected time",
-    "capacity": "Capacity"
+    "capacity": "Capacity",
+    "locationClosedOnDate": "Location closed on this date: {{reason}}",
+    "resourceTypeClosedOnDate": "All {{resourceType}} are closed on this date: {{reason}}",
+    "resourceClosedOnDate": "Resource closed on this date: {{reason}}",
+    "resourceClosedOnDay": "Resource is closed on {{day}}",
+    "locationClosedOnDay": "Location is closed on {{day}}",
+    "closureType": {
+      "holiday": "Holiday",
+      "maintenance": "Maintenance",
+      "special_event": "Special Event",
+      "emergency": "Emergency",
+      "custom": "Closure"
+    }
   },
   "contracts": {
     "title": "Contracts",
@@ -1123,7 +1142,15 @@
     "timeSlot": "Time Slot",
     "bookAnother": "Book Another Entry",
     "packageContract": "Contract",
-    "selectAPackage": "Select a package"
+    "selectAPackage": "Select a package",
+    "selectACustomer": "Select a Customer",
+    "bookingFor": "Booking for",
+    "changeCustomer": "Chnage Customer",
+    "locationClosed": "Location Closed",
+    "resourcesClosed": "resources closed",
+    "locationClosedToday": "Location Closed Today",
+    "partialClosureToday": "Partial Closure Today",
+    "resourcesAffected": "resources affected"
   },
   "calendar": {
     "sunday": "Sun",
@@ -1132,7 +1159,64 @@
     "wednesday": "Wed",
     "thursday": "Thu",
     "friday": "Fri",
-    "saturday": "Sat"
+    "saturday": "Sat",
+    "hours": "Hours",
+    "selectLocation": "Select Location",
+    "noLocationsFound": "No locations found",
+    "createLocationFirst": "Please create a location first in the Locations tab",
+    "weeklySchedule": "Weekly Operating Schedule",
+    "weeklyScheduleDescription": "Define the regular operating hours for this location. These hours will apply to all resources unless overridden.",
+    "resourceOverrides": "Resource Schedule Overrides",
+    "resourceOverridesDescription": "Configure custom operating hours for specific resources that differ from the location's schedule.",
+    "closuresAndExceptions": "Closures & Exceptions",
+    "closuresDescription": "Add special closures like holidays, maintenance periods, or events that override regular schedules.",
+    "status": "Status",
+    "openingHours": "Opening Hours",
+    "closed": "Closed",
+    "open": "Open",
+    "closedAllDay": "Closed all day",
+    "saveSchedule": "Save Schedule",
+    "schedulesSaved": "Operating schedule saved successfully",
+    "customSchedule": "Custom Schedule",
+    "usesLocationSchedule": "Uses location schedule",
+    "addCustomSchedule": "Add Custom Schedule",
+    "confirmDeleteResourceSchedule": "Are you sure you want to delete this custom resource schedule? The resource will revert to using the location schedule.",
+    "resourceScheduleDeleted": "Resource schedule deleted successfully",
+    "noResourcesInLocation": "No resources found in this location",
+    "resourceOverridesIntro": "Resources listed below will use the location's operating schedule unless you add a custom schedule.",
+    "customScheduleFor": "Custom Schedule for",
+    "resourceScheduleSaved": "Resource schedule saved successfully",
+    "entireLocation": "Entire Location",
+    "specificResource": "Specific Resource",
+    "allResourcesOfType": "All Resources of Type",
+    "allDesks": "All Desks",
+    "allMeetingRooms": "All Meeting Rooms",
+    "addClosure": "Add Closure",
+    "noClosuresFound": "No closures scheduled",
+    "addClosureDescription": "Add holidays, maintenance periods, or other exceptions to your operating schedule.",
+    "closure": "Closure",
+    "recurring": "Recurring",
+    "confirmDeleteClosure": "Are you sure you want to delete this closure?",
+    "closureDeleted": "Closure deleted successfully",
+    "addNewClosure": "Add New Closure",
+    "editClosure": "Edit Closure",
+    "closureScope": "Applies To",
+    "resourceType": "Resource Type",
+    "selectResource": "Select Resource",
+    "startDate": "Start Date",
+    "endDate": "End Date",
+    "closureType": "Closure Type",
+    "holiday": "Holiday",
+    "maintenance": "Maintenance",
+    "specialEvent": "Special Event",
+    "emergency": "Emergency",
+    "custom": "Custom",
+    "reason": "Reason",
+    "closureReasonPlaceholder": "e.g., Christmas Day, Annual maintenance, Company event",
+    "recurringAnnually": "Recurring annually",
+    "recurringHelpText": "This closure will repeat every year on the same dates",
+    "closureCreated": "Closure created successfully",
+    "closureUpdated": "Closure updated successfully"
   },
   "photoGallery": {
     "title": "Photo Gallery",
@@ -1921,6 +2005,10 @@
       "deactivate": "Deactivate",
       "deactivated": "Deactivated"
     }
+  },
+  "resources": {
+    "scrivania": "Desks",
+    "sala_riunioni": "Meeting Rooms"
   },
   "app": {
     "appName": " ",
